fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -566,9 +566,9 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 85vw;
-	padding: 1em 2em;
-	margin: 2em, 0, 2em, 0;
+	max-width: 90vw;
+	padding: 1em 1em;
+	margin: 2em, 0, 4em, 0;
 	cursor: pointer;
 	transition: transform 0.6s ease-in-out, background 0.6s ease-in-out;
 }
